# inductor-mlir

./: CMakeLists.txt  README.md  broadcast_pass.out  tosa_conversion_pass.out
decompPyTorch/: batchnorm2d.py  prod.py
include/Inductor/: CMakeLists.txt  InductorDialect.h  InductorDialect.td  InductorOps.h  InductorOps.td  InductorPasses.h  InductorTraits.h  InductorTraits.td  Passes.h  Passes.td
include/Utils/: ShapeType.h
inductor-opt/: CMakeLists.txt  inductor-opt.cpp
lib/: CMakeLists.txt  InductorBroadcastTrait.cpp
lib/Inductor/: CMakeLists.txt  InductorDialect.cpp  InductorOps.cpp  LowerToTosa.cpp
lib/Transforms/: AnalyseBroadcastPass.cpp  BroadcastPass.cpp  CMakeLists.txt
lib/Utils/: CMakeLists.txt  ShapeType.cpp
python/: batchnorm2d.py  broadcast_tensors.py  entr.py
test/: CMakeLists.txt  lit.cfg.py
test/Inductor/: add.mlir  batchnorm2d.mlir  broadcast_pass.mlir  broadcast_tensors.mlir  entr.mlir  inductorbroadcastTrait.mlir  inductorbroadcastTrait_invalid.mlir  inductorbroadcastTrait_valid.mlir  prod.mlir  reshape.mlir  tile.mlir
test/LowerToLLVM/: add.mlir  batchnorm2d.mlir  broadcast_pass.mlir  entr.mlir  prod.mlir  reshape.mlir  sub.mlir  tile.mlir
test/LowerToTOSA/: add.mlir  batchnorm2d.mlir  prod.mlir  reshape.mlir  sub.mlir
